--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,11 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  sqflite: ^2.2.0
+  sqflite: ^2.2.8
   path: ^1.8.3
+  google_fonts: ^6.2.1
+  flutter_staggered_animations: ^1.1.1
+
 
 dev_dependencies:
   flutter_test:
